--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "crwn-clothing",
-    "homepage": "https://Haslaminator.github.io/crwn-clothing",
+    "homepage": "https://Haslaminator.github.io/",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
